--- a/01_introToReact/index.css
+++ b/01_introToReact/index.css
@@ -4,6 +4,11 @@
     border-radius: 20px;
     width: 40%;
 }
+.title{
+    background-color: blue;
+    color: yellow;
+    border-radius: 20px;
+}
 h1{
     text-align: center;
 }
